# chatmlis_rbc_ollama

./: Cargo.toml  Modelfile  Modelfile.backup  README.md
client/: package.json  pnpm-lock.yaml
client/src/: app.css  app.html
client/src/lib/custom-ui/: BotResponse.svelte  ThemeSwitch.svelte  UserPrompt.svelte
client/src/routes/: +page.svelte
src/: main.rs
